# ChePP

./: .gitignore  CMakeLists.txt  bugs.txt
engine/: CMakeLists.txt
engine/include/ChePP/engine/: UCI.h  bitboard.h  history.h  move_ordering.h  movegen.h  network_net.h  nnue.h  position.h  search.h  search_stack.h  tb.h  tm.h  tt.h  types.h
engine/resources/: format.txt  layers.json
engine/scripts/: bin2h.cpp
nnue_training/: CMakeLists.txt  infos.txt
nnue_training/data/: binpach2grapheus.cpp  binpack2grapheus.cpp  config.json  data_loader.h
nnue_training/data/binpack/: nnue_data_binpack_format.h  nnue_training_data_stream.h
nnue_training/data/converter/: binpack_converter.h  grapheus_converter.h
nnue_training/data/stream/: binpack_sfen_input_stream.h  steam_source.h  stream_view.h
nnue_training/data/utils/: rng.h  tmp_file.h  utils.h
nnue_training/datasets/: config.json  download.py
scripts/syzygy/: 3-4-5-6.md5
